--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5">My Writings</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/KoushikGrandhi">My Projects</a></li>
                     
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -46,7 +47,7 @@
                         7575 Frankford Road · Dallas, TX 75252 · (530) 382-6702 ·
                         <a href="mailto:connect@gkoushik.com">connect@gkoushik.com</a>
                     </div>
-                    <p class="lead mb-5">I am currently in my first semester at University of Texas at Dallas pursuing Master's in Computer Science. My interested topics are mostly biased towards anything that relates a Pixel to AI.</p>
+                    <p class="lead mb-5">I am currently in my second semester at the University of Texas at Dallas pursuing a Master's in Computer Software Engineering. My interested topics are mostly biased towards anything that relates a Pixel to AI.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/koushik-grandhi-961870ab/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/KoushikGrandhi"><i class="fab fa-github"></i></a>
