--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5">My Writings</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/KoushikGrandhi">My Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/KoushikGrandhi?tab=repositories">My Projects</a></li>
                     
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
