--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
                         <p class="mb-0"><a href = "https://photos.app.goo.gl/MouDncVb48CGMBk49">Click here to view the photos that I like the most. </a> </p>
                         <p> <a href = "https://www.instagram.com/a_nomad_capturer/">Follow my Instagram handle for more! </a></p>
                     <p class="mb-0">Other time I read lots of blogs and books!
-                        Lately I spend some time in writing some blogs technical posts, you can check it out here <a href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5">My Writings</a>
+                        Sometimes, I try to engulf myself in writing mostly my observations (things around me) and sometimes technical stuff too.
+                        You can check the latest (technical) post here at my <a href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5"><strong>Notion</strong> </a>page. </p>
 
                 </div>
             </section>
