--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software systems Engineer</h3>
                             <div class="subheading mb-3">Edgeverve systems, Infosys</div>
-                            <p>Worked numerous projects over a period of 2 years. Project related to automation of windows application, development of 
+                            <p>Over a period of 2 years, worked on numerous projects. Projects related to automation of windows application, development of 
                                 windows applications, API development for automating tools, Recognition of Image and Text from ID's and documents to speed up the verification 
                                 process and lastly automation of SAP application and Mainframe application. All projects and usecases required to learn and implement various 
                                 utilities of .net framework.
