--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being an engineer, I enjoy photography (More Pixels!) lately I amuse myself by 
-                        reading about technical developments related image resolution.</p>
-                        <p class="mb-0"><a href = "https://photos.app.goo.gl/MouDncVb48CGMBk49">Click here to view the photos that I like the most. </a> </p>
+                        reading about technical developments related to images.</p>
+                        <p class="mb-0"><a href = "https://photos.app.goo.gl/MouDncVb48CGMBk49">Check out some of my clicks here.</a> </p>
                         <p> <a href = "https://www.instagram.com/a_nomad_capturer/">Follow my Instagram handle for more! </a></p>
                     <p class="mb-0">Other time I read lots of blogs and books!
                         Sometimes, I try to engulf myself in writing my observations (about happenings around me) and sometimes technical stuff too.
