--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href ="https://github.com/KoushikGrandhi/Python_Projects-">Python Backend</a></h3>
-                            <div class="subheading mb-3">Random projects based on curiosity</div>
+                            <div class="subheading mb-3">Random project ideas. </div>
                             <!-- <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p> -->
                         </div>
                         <!-- <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div> -->
@@ -165,7 +165,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being an engineer, I enjoy photography (More Pixels!) lately I amuse myself by 
-                        reading about technical developments related to images.</p>
+                        reading about technical developments/ projects related to images.</p>
                         <p class="mb-0"><a href = "https://photos.app.goo.gl/MouDncVb48CGMBk49">Check out some of my clicks here.</a> </p>
                         <p> <a href = "https://www.instagram.com/a_nomad_capturer/">Follow my Instagram handle for more! </a></p>
                     <p class="mb-0">Other time I read lots of blogs and books!
