--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
                         7575 Frankford Road · Dallas, TX 75252 · (530) 382-6702 ·
                         <a href="mailto:connect@gkoushik.com">connect@gkoushik.com</a>
                     </div>
-                    <p class="lead mb-5">I am currently in my second semester at the University of Texas at Dallas pursuing Master's in Computer Software Engineering. My interested topics are mostly biased towards anything that relates a Pixel to AI.</p>
+                    <p class="lead mb-5">Experienced Software Developer with a keen interest to solve challenging problems having a strong foundation in computer technologies. 
+                        Currently in my second semester at the University of Texas 
+                        at Dallas pursuing Master's in Computer Software Engineering. My learnings 
+                        are steeply inclined towards understanding the relation between Pixels and Machine Learning techiniques.
+                        </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/koushik-grandhi-961870ab/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/KoushikGrandhi"><i class="fab fa-github"></i></a>
@@ -67,8 +71,7 @@
                             <div class="subheading mb-3">Edgeverve systems, Infosys</div>
                             <p>Over a period of 2 years, worked on numerous projects. Projects related to automation of windows application, development of 
                                 windows applications, API development for automating tools, Recognition of Image and Text from ID's and documents to speed up the verification 
-                                process and lastly automation of SAP application and Mainframe application. All projects and usecases required to learn and implement various 
-                                utilities of .net framework.
+                                process and lastly automation of SAP tool and Mainframe application. 
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Nov 2018 - Dec 2020</span></div>
@@ -111,16 +114,16 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Texas, Dallas</h3>
-                            <div class="subheading mb-3">Master of Science - Computer Software Engineering</div>
-                            <div>Courses completed: Machine Learning, Software Testing and Validation, Software Requirements Engineering</div>
-                            <p>1st Semester GPA: 3.89</p>
+                            <div class="subheading mb-3">Master's of Science - Computer Software Engineering</div>
+                            <div>Relevant Courses : Design and Analysis of Computer Algorithms , Machine Learning, Software Requirements Engineering, Software Testing and Validation</div>
+                            <!-- <p>1st Semester GPA: 3.89</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">SRM University, Chennai, India</h3>
-                            <div class="subheading mb-3">Bachelor of Technology - Computer Science Engineering</div>
+                            <div class="subheading mb-3">Bachelor's of Technology - Computer Science Engineering</div>
                             <p>GPA: 8.9/10 </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2014 - May 2018</span></div>
