--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="mailto:connect@gkoushik.com">connect@gkoushik.com</a>
                     </div>
                     <p class="lead mb-5">Experienced Software Developer with a keen interest to solve challenging problems having a strong foundation in multiple Computer Technologies. 
-                        Currently in my second semester at the University of Texas 
+                        Currently in second semester at the University of Texas 
                         at Dallas pursuing Master's in Computer Software Engineering. My learnings 
                         are steeply inclined towards understanding the relation between Pixels and Machine Learning techiniques.
                         </p>
