--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <a href="mailto:connect@gkoushik.com">connect@gkoushik.com</a>
                     </div>
                     <p class="lead mb-5">Experienced Software Developer with a keen interest to solve challenging problems having a strong foundation in multiple Computer Technologies. 
-                        Currently in second semester at the University of Texas 
+                        Currently in the second semester at the University of Texas 
                         at Dallas pursuing Master's in Computer Software Engineering. My learnings 
-                        are steeply inclined towards understanding the relation between Pixels and Machine Learning techiniques.
+                        are steeply inclined towards understanding the relation between Pixels and Machine Learning techniques.
                         </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/koushik-grandhi-961870ab/"><i class="fab fa-linkedin-in"></i></a>
