--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                             <a href="https://archive.ics.uci.edu/ml/machine-learning-databases/mushroom/">Mushroom</a> dataset along with the implementation of sklearn DecisionTreeClassifier algorithm for result comparison.</p>
                             <p><a href ="https://www.kaggle.com/zalando-research/fashionmnist">Fashion MNIST classification </a>: Implemented DNN model to classify the famous dataset that gave an accuracy of 91.6% on validation.</p>
                             <p><a href ="http://www.laurencemoroney.com/horses-or-humans-dataset/">Human and Horse Image Classification </a>: Trained a CNN model on 500 images of Horses and Humans with a mean accuracy of ~84% on the validation set of around 120 images each.</p>
-                            <p><a href ="https://github.com/KoushikGrandhi/Machine-Learning-Projects/tree/master/MovieReview%20ClassificationSVC">Review Classification using Linear SVM </a>: Used sklearn to extract text features from reviews and trained a model by Pipelining the term frequency-inverse document frequency (tf-idf) Vectorization and training SVM model.</p>
+                            <p><a href ="https://github.com/KoushikGrandhi/Machine-Learning-Projects/tree/master/Rain_Prediction_Australia">Next Day Rain Predition </a>: Analyzed the <a href="https://www.kaggle.com/jsphyg/weather-dataset-rattle-package"> Australian Rain Prediction dataset</a> consisting of 23 features having many missing data and outliers then preprocessed and selected correlated features to train on traditional ML algorithms to evaluate the performance of algorithms by accuracy, scalability, interpretability, robustness to outliers and measure the improvement by introducing Bagging & Boosting.</p>
                             <p><a href ="https://github.com/KoushikGrandhi/Machine-Learning-Projects/tree/master/Object_tracking">Object Tracking using Histogram extraction </a>: Used OpenCV to capture Pixel Intensity of any object and used the resulted information to track the object. </p>
                             <p><a href ="https://github.com/KoushikGrandhi/Machine-Learning-Projects/tree/master/PicStacking">Picture Stacking for Image Enhancement </a>: Implemented ORB (Oriented and Rotated Brief) and ECC (Enhanced Correlation Coefficient) algorithms on Images
                                 using OpenCV and devised a logical approach to mask dim pixels to further balance quality and noise. </p>
-                            <p><a href ="https://github.com/KoushikGrandhi/Machine-Learning-Projects/tree/master/Rain_Prediction_Australia">Next Day Rain Predition </a>: Analyzed the <a href="https://www.kaggle.com/jsphyg/weather-dataset-rattle-package"> Australian Rain Prediction dataset</a> consisting of 23 features having many missing data and outliers then preprocessed and selected correlated features to train on traditional ML algorithms to evaluate the performance of algorithms by accuracy, scalability, interpretability, robustness to outliers and measure the improvement by introducing Bagging & Boosting.</p>
+                            <p><a href ="https://github.com/KoushikGrandhi/Machine-Learning-Projects/tree/master/MovieReview%20ClassificationSVC">Review Classification using Linear SVM </a>: Used sklearn to extract text features from reviews and trained a model by Pipelining the term frequency-inverse document frequency (tf-idf) Vectorization and training SVM model.</p>
                             <p><a href ="https://github.com/KoushikGrandhi/Machine-Learning-Projects/tree/master/Spam%20Classification">Spam Text Classifier </a>: Basic classification of Email /Texts to Spam or Non-Spam using Pipelining on SVC with accuracy of around 98%. </p>
 
                             <p></p>
@@ -196,11 +196,11 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being an engineer, I enjoy photography (More Pixels!) and also read about technical developments/ projects related to images and cameras.</p>
+                    <p>Apart from being an engineer, I enjoy photography (More Pixels!) and also reading about technical developments/ projects related to images and cameras.</p>
                         <p class="mb-0"><a href = "https://photos.app.goo.gl/MouDncVb48CGMBk49">Check out some of my clicks here.</a> </p>
                         <p> <a href = "https://www.instagram.com/a_nomad_capturer/">Follow my Instagram handle for more! </a></p>
-                    <p class="mb-0">Other times I read lots of blogs and books!
-                        Sometimes, I try to engulf myself in writing my observations (about happenings around me) and sometimes I write about technical stuff.
+                    <p class="mb-0">I read lots of blogs and books on a daily basis.
+                        Sometimes, I try to engulf myself in writing my observations (about happenings around me) or summarizing a novel or any technical topic that interests me.
                         You can check the latest (technical) pennings here at my <a href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5"><strong>Notion</strong> </a>page.</p>
 
                 </div>
