--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"> Experience </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education"> Education </a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">My Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5">My Writings</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5">Writings</a></li>
                   
                 </ul>
             </div>
