--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"> Experience </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education"> Education </a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">My Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5">Writings</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5">My Writings</a></li>
                   
                 </ul>
             </div>
@@ -43,13 +43,11 @@
                         <span class="text-primary">Grandhi</span>
                     </h1>
                     <div class="subheading mb-5">
-                        
-                        <a href="mailto:connect@gkoushik.com">connect@gkoushik.com</a>
+                        Cityline· Richardson, TX 75252 · (530) 382-6702 ·
                     </div>
                     <p class="lead mb-5">Experienced Software Developer with a keen interest to solve challenging problems having a strong foundation in multiple Computer Technologies. 
                         Currently in the second semester at the University of Texas 
-                        at Dallas pursuing Master's in Computer Software Engineering. My learnings 
-                        are steeply inclined towards understanding the relation between Pixels and Machine Learning techniques.
+                        at Dallas with Master's in Computer Software Engineering.
                         </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/koushik-grandhi-961870ab/"><i class="fab fa-linkedin-in"></i></a>
@@ -65,6 +63,28 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"> Software Engineer</h3>
+                            <div class="subheading mb-3">CBRE Inc.</div>
+                            <p>I started as a full-time engineer with the Econometric Advisors team, contributing to Benchmarker 2.0 by developing features, building frontend components with Angular, and designing backend models and database schemas for data-driven analytics in the hospitality industry.
+                                Subsequently, I joined the Global Workspace Solutions team, enhancing MyData, a client-facing application, through full-stack development and key design decisions. 
+                                <p>Currently, I am part of the Next Action Recommendation Engine team, where I designed and built a data pipeline to integrate AI driven insights and metrics into 
+                                Vantage Analytics, enabling data-driven recommendations for clients with required customizations and requirements.</p>
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2022 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Intern - Software Engineer</h3>
+                            <div class="subheading mb-3">Axxess Healthcare</div>
+                            <p>Worked on Axxess's Homecare project as a software engineer which is a professional all-platform application to assist patients and medical agencies on a daily basis with medical or non-medical services. 
+                                <p>Developed and deployed new features related to scheduling of client orders and also worked to rectify issues in the existing workflow of certain features such as pdf generation, notifications, and billing APIs</p>
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - May 2022</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software systems Engineer</h3>
@@ -201,10 +221,10 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being an engineer, I enjoy photography (More Pixels!) and also reading about technical developments/ projects related to images and cameras.</p>
-                        <p class="mb-0"><a href = "https://photos.app.goo.gl/MouDncVb48CGMBk49">Check out some of my clicks here.</a> </p>
+                        <p class="mb-0"><a href = "https://photos.app.goo.gl/MouDncVb48CGMBk49">Check out some of my clicks here (G Drive).</a> </p>
                         <p> <a href = "https://www.instagram.com/a_nomad_capturer/">Follow my Instagram handle for more! </a></p>
-                    <p class="mb-0">I read lots of blogs and books on a daily basis.
-                        Sometimes, I try to engulf myself in writing my observations (about happenings around me) or summarizing a novel or any technical topic that interests me.
+                    <p class="mb-0">I regularly immerse myself in blogs and books, fueling my curiosity and satisfying my passion for continuous learning.
+                        Sometimes, I try to engulf myself in writing my observations (about things happening around me) or summarizing a novel or any technical topic that interests me.
                         You can check the latest (technical) pennings here at my <a href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5"><strong>Notion</strong> </a>page.</p>
 
                 </div>
