--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="text-primary">Grandhi</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Cityline· Richardson, TX 75252 · (530) 382-6702 ·
+                        Dallas, TX
                     </div>
                     <p class="lead mb-5">Software Engineer at CBRE (Fortune 200) within Global Digital & Technology, focused on designing and building scalable, cloud-based applications. 
                         Strong problem-solving skills and a solid foundation in modern software engineering and computer technologies. Known for delivering reliable solutions and owning features from gathering requirements through deployment as part of the Client Success foundation.
