--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being an engineer, I enjoy photography (More Pixels!) and also reading about technical developments/ projects related to images and cameras.</p>
-                        <p class="mb-0"><a href = "https://photos.app.goo.gl/MouDncVb48CGMBk49">Check out some of my clicks here (G Drive).</a> </p>
+                    <p>Apart from being an engineer, I enjoy photography (More Pixels!) and also reading in general.</p>                    
                         <p> <a href = "https://www.instagram.com/a_nomad_capturer/">Follow my Instagram handle for more! </a></p>
                     <p class="mb-0">I regularly immerse myself in blogs and books, fueling my curiosity and satisfying my passion for continuous learning.
                         Sometimes, I try to engulf myself in writing my observations (about things happening around me) or summarizing a novel or any technical topic that interests me.
