--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@
                     <p>Apart from being an engineer, I enjoy photography (More Pixels!) and also reading in general.</p>                    
                         <p> <a href = "https://www.instagram.com/a_nomad_capturer/">Follow my Instagram handle for more! </a></p>
                     <p class="mb-0">I regularly immerse myself in blogs and books, fueling my curiosity and satisfying my passion for continuous learning.
-                        Sometimes, I try to engulf myself in writing my observations (about things happening around me) or summarizing a novel or any technical topic that interests me.
-                        You can check the latest (technical) pennings here at my <a href="https://www.notion.so/Bagging-Ensemble-methods-8c07da7dcc184d668184e2ee2eba4cb5"><strong>Notion</strong> </a>page.</p>
+                        Sometimes, I try to engulf myself in writing my observations (about things happening around me) or summarizing a novel or any technical topic that interests me.</p>                
 
                 </div>
             </section>
